* Edit custom.css : Disable text shadown in code highlighting and fix word-wrap problem

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -118,3 +118,12 @@ info {
   padding-top:    2rem;
   padding-bottom: 2rem;
 }
+
+/*
+ * Disable text-shadow in code highlighting
+ *
+ */
+code {
+  text-shadow: none;
+  word-wrap: normal;
+}
